--- a/app/src/pages/FarmPage.scss
+++ b/app/src/pages/FarmPage.scss
@@ -6,7 +6,7 @@
 
     &__name-input {
         display: block;
-        margin-top: 4px;
+        margin: 4px 0 0;
         width: 100%;
     }
 
